# crash

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPY.md  Cargo.toml  HEADER.txt  LICENSE  README.md  build.zig  experimental.cir  runme.cir
cir/cir-parser/: Cargo.toml
cir/cir-parser/src/: includes.rs  lib.rs  parser.rs  stream.rs  token.rs  tokenizer.rs
cir/cir-parser/src/error/: mod.rs
cir/cir-parser/src/expr/: mod.rs  variable.rs
cir/cir-parser/src/header/: include.rs  mod.rs
cir/cir-parser/src/headers/: constants.rs  include.rs  mod.rs
cir/cir-parser/src/instructions/: mod.rs  mov.rs
cir/cir-parser/src/literals/: mod.rs  names.rs  path.rs  string.rs
cir/cir-parser/src/misc/: mod.rs
cir/cir-parser/src/structure/: macros.rs  mod.rs
compiler/: CMakeLists.txt  README.md  setup.sh
compiler/crashc/: Cargo.toml
compiler/crashc-ast/: CMakeLists.txt  Cargo.toml
compiler/crashc-ast/src/: class.rs  components.rs  cursor.rs  expression.rs  general.rs  lib.rs  misc.rs  modifier.rs  node.rs  parser.rs  statement.rs  types.rs
compiler/crashc-ast/src/decl/: class.rs  enumeration.rs  expression.rs  interface.rs  misc.rs  mod.rs  modifier.rs  module.rs  statement.rs  types.rs
compiler/crashc-ast/src/parser/: constants.rs  functions.rs  import.rs  macros.rs  mod.rs
compiler/crashc-lex/: CMakeLists.txt
compiler/crashc-lex/src/: token.h
compiler/crashc-lexer/: Cargo.toml  README.md
compiler/crashc-lexer/src/: cursor.rs  lexer.rs  lib.rs  macros.rs  position.rs  rule.rs  test.rs  token.rs  tokenizer.rs  utils.rs
compiler/crashc-llvm/: Cargo.toml
compiler/crashc-llvm/src/: lib.rs
compiler/crashc-parser/: CMakeLists.txt  Cargo.toml
compiler/crashc-parser/src/: constructor.rs  function.rs  import.rs  lib.rs  macros.rs  modifier.rs  position.rs  statement.rs  stream.rs  structures.rs
compiler/crashc-parser/src/body/: if_statement.rs  mod.rs
compiler/crashc-parser/src/expr/: arithmetic.rs  literal.rs  mod.rs
compiler/crashc-tree/: Cargo.toml
compiler/crashc-tree/src/: lib.rs  misc.rs  types.rs
compiler/crashc/src/: main.rs
(+107 files in other folders)
