[workspace]
resolver = "2"
members = [
    "crash/crash-ast",
    "crash/crash-main",
    "crash/crash-utils",
    "cbcr/cbcr-parser",
    "cir/cir-parser",
    "cir/cir-lexer",
    "cir/cir-analyser",
    "crashc/crashc-main",
    "crashc/targets/aot-llvm-17",
    "crashc/targets/jit-rust",
    "crasher/crasher-main"
]